force-app/main/default/objects/MiningSite__c/MiningSite__c.object-meta.xml
<CustomObject>
    <description>Mining location with known ore and estimated amounts.</description>
    <label>Mining Site</label>
    <nameField>
        <label>Mining Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mining Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>