force-app/main/default/objects/MiningSite__c/fields/Cost_to_Travel__c.field-meta.xml
<CustomField>
    <fullName>Cost_to_Travel__c</fullName>
    <description>This should be an estimate of how much it costs a standard mining ship to travel to this location from the home base of the org, for a feel of the value of making a trip here also considering its approximate yield left worth of ore.</description>
    <label>Cost to Travel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>