force-app/main/default/objects/MiningSite__c/fields/EstimatedWorth__c.field-meta.xml
<CustomField>
    <fullName>EstimatedWorth__c</fullName>
    <description>An estimate of the yearly value of ore at this site.</description>
    <label>Estimated Site Worth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>