force-app/main/default/objects/MiningSite__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>The location of the mining site.</description>
    <label>Location</label>
    <scale>1</scale>
    <type>Location</type>
</CustomField>