force-app/main/default/objects/MiningSite__c/fields/Ore__c.field-meta.xml
<CustomField>
    <fullName>Ore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ore that this site has</description>
    <label>Primary Ore</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Family</field>
            <operation>equals</operation>
            <value>Ore</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Mining Sites</relationshipLabel>
    <relationshipName>MiningSites</relationshipName>
    <type>Lookup</type>
</CustomField>